codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs, status_indicator_widget.rs
