codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• Called search.find_docs({"query":"ratatui styling","limit":3})
  └ Error: network timeout
