codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__error_event_oversized_input_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
■ Message exceeds the maximum length of 1048576 characters (1048577 provided).
