codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__mcp_tools_output_from_statuses_renders_status_only_servers.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: (none)
    • Resource templates: (none)
